--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,22 @@
   font-display: swap;
 }
 
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+
+  --breakpoint-sm: 375px;
+  --breakpoint-md: 744px;
+  --breakpoint-lg: 1024px;
+
+  --color-gray-light: #D9D9D9;
+  --color-gray-darker: #4B5563;
+  --color-yellow: #FFDE5B;
+  --color-black: #1F2937;
+}
+
+/* TODO: 라이트 & 다크 모드 설정 */
+
 body {
   font-family: 'Fredoka', sans-serif;
 }
