--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,9 +16,11 @@
   --breakpoint-md: 744px;
   --breakpoint-lg: 1024px;
 
-  --color-gray-light: #D9D9D9;
+  --color-gray-light-01: #D9D9D9;
+  --color-gray-light-02: #BFBFBF;
   --color-gray-darker: #4B5563;
   --color-yellow: #FFDE5B;
+  --color-yellow-darker: #F5D048;
   --color-black: #1F2937;
 }
 
