--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,13 +9,14 @@
 }
 
 @theme {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-
   --breakpoint-sm: 375px;
   --breakpoint-md: 744px;
   --breakpoint-lg: 1024px;
 
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+
+  --color-gray-lightest: #FAFBFB;
   --color-gray-light-01: #D9D9D9;
   --color-gray-light-02: #BFBFBF;
   --color-gray-darker: #4B5563;
