--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,43 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: 'Fredoka';
+  src: url('/fonts/Fredoka-VariableFont_wdth,wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
 }
 
-@theme inline {
+@theme {
+  --breakpoint-sm: 375px;
+  --breakpoint-md: 744px;
+  --breakpoint-lg: 1024px;
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  --color-gray-lightest: #FAFBFB;
+  --color-gray-light-01: #D9D9D9;
+  --color-gray-light-02: #BFBFBF;
+  --color-gray-darker: #4B5563;
+  --color-yellow: #FFDE5B;
+  --color-yellow-darker: #F5D048;
+  --color-black: #1F2937;
+
+  --animate-shine: shine 1.1s ease-in-out alternate infinite;
+
+  @keyframes shine {
+    0% {
+      background-position: 0% 50%;
+    }
+    100% {
+      background-position: 100% 50%;
+    }
   }
 }
 
+/* TODO: 라이트 & 다크 모드 설정 */
+
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fredoka', sans-serif;
 }
